--- a/src/main/resources/webapp/sidebar/styles.html
+++ b/src/main/resources/webapp/sidebar/styles.html
@@ -1,6 +1,8 @@
   <link href="/icon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <link href="/bootstrap-4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="/fontawesome-free-5.11.2-web/css/all.min.css" rel="stylesheet" type="text/css" />
+  <script src="/moment.js/2.24.0/moment-with-locales.min.js"></script>
+  <link href="/datetimepicker/css/tempusdominus-bootstrap-4.css" rel="stylesheet" type="text/css" />
   <!-- Custom styles for this template -->
   <link href="/css/sidebar.css" rel="stylesheet">
   <style type="text/css">
